update java and jvm internal content